--- a/BubbleBobbleAndEngine/Minigin/Minigin.vcxproj.filters
+++ b/BubbleBobbleAndEngine/Minigin/Minigin.vcxproj.filters
@@ -35,6 +35,7 @@
     <ClInclude Include="FPS.h">
       <Filter>Components</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InputManager.cpp">
@@ -56,5 +57,6 @@
     <ClCompile Include="FPS.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
 </Project>
