--- a/BubbleBobbleAndEngine/MMuttonEngine/MMuttonEngine.vcxproj
+++ b/BubbleBobbleAndEngine/MMuttonEngine/MMuttonEngine.vcxproj
@@ -176,6 +176,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BaseComponent.h" />
+    <ClInclude Include="BinaryReader.h" />
     <ClInclude Include="BoxColliderComponent.h" />
     <ClInclude Include="ControllerComponent.h" />
     <ClInclude Include="Font.h" />
@@ -198,6 +199,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseComponent.cpp" />
+    <ClCompile Include="BinaryReader.cpp" />
     <ClCompile Include="BoxColliderComponent.cpp" />
     <ClCompile Include="ControllerComponent.cpp" />
     <ClCompile Include="Font.cpp" />
