--- a/BubbleBobbleAndEngine/Minigin/Minigin.vcxproj.filters
+++ b/BubbleBobbleAndEngine/Minigin/Minigin.vcxproj.filters
@@ -34,6 +34,7 @@
     </ClInclude>
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerControllerComponent.h" />
+    <ClInclude Include="Enemy.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -54,5 +55,6 @@
     </ClCompile>
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerControllerComponent.cpp" />
+    <ClCompile Include="Enemy.cpp" />
   </ItemGroup>
 </Project>
