--- a/BubbleBobbleAndEngine/MMuttonEngine/MMuttonEngine.vcxproj.filters
+++ b/BubbleBobbleAndEngine/MMuttonEngine/MMuttonEngine.vcxproj.filters
@@ -78,12 +78,10 @@
     <ClInclude Include="InputComponent.h">
       <Filter>Components</Filter>
     </ClInclude>
-    <ClInclude Include="ControllerComponent.h">
-      <Filter>Components</Filter>
-    </ClInclude>
     <ClInclude Include="BinaryReader.h">
       <Filter>Helper</Filter>
     </ClInclude>
+    <ClInclude Include="AnimationComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Renderer.cpp">
@@ -132,14 +130,12 @@
     <ClCompile Include="GameData.cpp">
       <Filter>Core\Singletons</Filter>
     </ClCompile>
-    <ClCompile Include="ControllerComponent.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
     <ClCompile Include="InputComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="BinaryReader.cpp">
       <Filter>Helper</Filter>
     </ClCompile>
+    <ClCompile Include="AnimationComponent.cpp" />
   </ItemGroup>
 </Project>
